--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/HTTP.loader.js";
       var config = {
-        dataUrl: buildUrl + "/HTTP.data.br",
-        frameworkUrl: buildUrl + "/HTTP.framework.js.br",
-        codeUrl: buildUrl + "/HTTP.wasm.br",
+        dataUrl: buildUrl + "/HTTP.data",
+        frameworkUrl: buildUrl + "/HTTP.framework.js",
+        codeUrl: buildUrl + "/HTTP.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "PhrozenRealmz",
         productName: "dwmb",
