--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
       var loaderUrl = buildUrl + "/HTTP-DWMB.loader.js";
       var config = {
         arguments: [],
-        dataUrl: buildUrl + "/HTTP-DWMB.data.br",
-        frameworkUrl: buildUrl + "/HTTP-DWMB.framework.js.br",
-        codeUrl: buildUrl + "/HTTP-DWMB.wasm.br",
+        dataUrl: buildUrl + "/HTTP-DWMB.data",
+        frameworkUrl: buildUrl + "/HTTP-DWMB.framework.js",
+        codeUrl: buildUrl + "/HTTP-DWMB.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "DWMB - Web",
